--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ h1 {
   line-height: 1.1;
 }
 
+li {
+  display: flex;
+  place-items: self-start;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
